# test_Aruco

./: .gitignore  CMakeLists.txt
cmake/: options.cmake  printInfo.cmake
src/: CMakeLists.txt  testARUCO.cpp
